BKE creation for doctors page
